<resources>
    <string name="app_name" translatable="false">FindFlight</string>
    <string name="app_slogan" translatable="false">Save your time and money</string>
    <string name="connection_timeout">Connection timeout</string>
    <string name="error_below_adult_number">At least 1 adult!</string>
    <string name="error_cant_find_flight">Can\'t find your flight</string>
    <string name="error_cant_find_place">Can\'t find your place</string>
    <string name="error_common">Something wrong…</string>
    <string name="error_no_internet">Error! Can only use offline function!</string>
    <string name="error_over_people_number">Max 9 passengers!</string>
    <string name="error_parse_json" translatable="false">Error parse json</string>
    <string name="text_add_passenger">ADD PASSENGER</string>
    <string name="text_added_to_favourite">Added to favourite</string>
    <string name="text_adult">Adult</string>
    <string name="text_adult_default" translatable="false">1</string>
    <string name="text_age_adult">Age 12+</string>
    <string name="text_age_child">Age 2–11</string>
    <string name="text_age_infant">Age 0–1</string>
    <string name="text_aircraft">Aircraft</string>
    <string name="text_apply">Apply</string>
    <string name="text_around_current_location">Around current location</string>
    <string name="text_arrival_terminal">Arrival terminal</string>
    <string name="text_available_seats">Available Seats</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_carrier">Carrier</string>
    <string name="text_child">Child</string>
    <string name="text_choose_date">Choose date</string>
    <string name="text_choose_date_from_first">Must choose date from first!</string>
    <string name="text_choose_departure_date">Choose departure date</string>
    <string name="text_choose_month">Choose month:</string>
    <string name="text_choose_place">Choose places</string>
    <string name="text_choose_return_date">Choose return date</string>
    <string name="text_class">Class</string>
    <string name="text_clear">Clear</string>
    <string name="text_currency">Currency</string>
    <string name="text_deleted_from_favourite">Deleted from favourite</string>
    <string name="text_departure_date">Departure date</string>
    <string name="text_departure_terminal">Departure terminal</string>
    <string name="text_direct">Direct</string>
    <string name="text_discover_explain_feature">* This feature shows the most visited destinations among travelers in your city.</string>
    <string name="text_discover_introduce1">Don\'t know where to go?</string>
    <string name="text_discover_introduce2">Lets us</string>
    <string name="text_discover_introduce3">for you*</string>
    <string name="text_discover_introduce_color">pick it</string>
    <string name="text_fare">Fare</string>
    <string name="text_field_required">This field is required!</string>
    <string name="text_fields_not_available">Some fields are not available!</string>
    <string name="text_filter">Filter</string>
    <string name="text_from">From:</string>
    <string name="text_from_required">From*:</string>
    <string name="text_held_infant" translatable="false">held_infant</string>
    <string name="text_highest_price">Highest Price</string>
    <string name="text_hint_number_of_stops">number of stops</string>
    <string name="text_hint_your_max_price">your max price</string>
    <string name="text_infant">Infant</string>
    <string name="text_info">Info</string>
    <string name="text_largest_available_seats">Largest Available Seats</string>
    <string name="text_layover">layover</string>
    <string name="text_leave_empty">(leave empty if you want our suggestions)</string>
    <string name="text_longest_duration">Longest Duration</string>
    <string name="text_lowest_price">Lowest Price</string>
    <string name="text_max_price">Max price:</string>
    <string name="text_no_sorting">No Sorting</string>
    <string name="text_number_of_stops">Number of stops:</string>
    <string name="text_oneway">Oneway trip:</string>
    <string name="text_open_setting">Settings</string>
    <string name="text_other_info">Other information</string>
    <string name="text_package" translatable="false">package</string>
    <string name="text_passenger_default" translatable="false">0</string>
    <string name="text_passengers">Passengers</string>
    <string name="text_permission_denied">Permission Denied, this function may not work correctly</string>
    <string name="text_permission_explain">This feature need location permission to work, please turn it on in settings</string>
    <string name="text_permission_granted">Permission Granted</string>
    <string name="text_place_city_name">City name</string>
    <string name="text_place_country_name">Country name</string>
    <string name="text_place_detailed_name">Detailed name</string>
    <string name="text_place_name">Name</string>
    <string name="text_place_timezone">Timezone</string>
    <string name="text_place_type">Type</string>
    <string name="text_price">Price</string>
    <string name="text_required_permission">Permission Required</string>
    <string name="text_return">:Return</string>
    <string name="text_return_date">Return date</string>
    <string name="text_set_time_reminder">Set time reminder</string>
    <string name="text_shortest_duration">Shortest Duration</string>
    <string name="text_smallest_available_seats">Smallest Available Seats</string>
    <string name="text_sort">Sort</string>
    <string name="text_start_date">Start:</string>
    <string name="text_stops">stops</string>
    <string name="text_tax_included">Tax included</string>
    <string name="text_to">To:</string>
    <string name="text_total">Total</string>
    <string name="text_travel_class">Travel class</string>
    <string name="text_turn_on_gps">Turn on GPS to get location!</string>
    <string name="text_unknown">-</string>
    <string name="text_weight_unit" translatable="false">KG</string>
    <string name="text_your_city">Your city:</string>
    <string name="title_choose_date">YYYY-MM-DD</string>
    <string name="title_default_passenger">1 Adult</string>
    <string name="title_discover">Discover</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search by name (airport, city)</string>
</resources>
