<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/dp_4"
        android:background="@drawable/bg_radius20_frangipani"
        app:layout_constraintDimensionRatio="7:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.15" />

    <RadioGroup
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/radioNoSort"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/color_gold_drop"
            android:text="@string/text_no_sorting"
            android:textSize="@dimen/sp_20" />

        <RadioButton
            android:id="@+id/radioLowestPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/color_gold_drop"
            android:text="@string/text_lowest_price"
            android:textSize="@dimen/sp_20" />

        <RadioButton
            android:id="@+id/radioHighestPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/color_gold_drop"
            android:text="@string/text_highest_price"
            android:textSize="@dimen/sp_20" />

        <RadioButton
            android:id="@+id/radioShortestDuration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/color_gold_drop"
            android:text="@string/text_shortest_duration"
            android:textSize="@dimen/sp_20" />

        <RadioButton
            android:id="@+id/radioLongestDuration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/color_gold_drop"
            android:text="@string/text_longest_duration"
            android:textSize="@dimen/sp_20" />

        <RadioButton
            android:id="@+id/radioSmallestAvailableSeats"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/color_gold_drop"
            android:text="@string/text_smallest_available_seats"
            android:textSize="@dimen/sp_20" />

        <RadioButton
            android:id="@+id/radioLargestAvailableSeats"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/color_gold_drop"
            android:text="@string/text_largest_available_seats"
            android:textSize="@dimen/sp_20" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>
